--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,17 @@ version: '3'
 
 services:
   db:
-    image: mysql/mysql-server
+    image: mysql:5.7
     ports:
     - "3306:3306"
+    container_name: cube-demo-mysql
+    environment:
+        MYSQL_ROOT_PASSWORD: cubedemo
+        MYSQL_DATABASE: cube_demo
+        MYSQL_USER: cubedemo
+        MYSQL_PASSWORD: cubedemo
+    networks:
+      - cubedemo
   web:
     build: .
     command: python3 manage.py runserver 0.0.0.0:8000
@@ -14,3 +22,9 @@ services:
       - "8000:8000"
     depends_on:
       - db
+    networks:
+      - cubedemo
+
+networks:
+  cubedemo:
+    external: true
